objects/sfFma__FeatureParameterInteger__c.object
<CustomObject>
    <description>Custom object that is part of FMA for storing Feature Parameter Overrides for integers

A new record is created of this object for every feature parameter that is ADDED as part of a package install in an org. This record is automatically created upon every package install.

The Feature Parameter object serves as an index.</description>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Value will be set to 0 when expired</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salesforce_Org__c</fullName>
        <formula>sfFma__License__r.Salesforce_Org__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfFma__FeatureParameter__c</fullName>
        <description>The parent Feature Parameter object.</description>
        <label>Feature Parameter</label>
        <referenceTo>sfFma__FeatureParameter__c</referenceTo>
        <relationshipLabel>Feature Parameter Integers</relationshipLabel>
        <relationshipName>Feature_Parameter_Integers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfFma__FullName__c</fullName>
        <description>Name of the Feature Parameter</description>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfFma__License__c</fullName>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Feature Parameter Integers</relationshipLabel>
        <relationshipName>Feature_Parameter_Integers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfFma__Value__c</fullName>
        <label>Feature Parameter Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feature Parameter Integer</label>
    <nameField>
        <displayFormat>FPI-{0000}</displayFormat>
        <label>Feature Parameter Integer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Parameter Integers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Licences_only_updated_by_Copado</fullName>
        <active>true</active>
        <description>This will prevent the package upgrade from v10 to v11 to reset all licences to the default value of BP, which is 30.</description>
        <errorConditionFormula>AND(

ISPICKVAL( sfFma__FeatureParameter__r.sfFma__DataFlowDirection__c , &quot;LMO To Subscriber&quot;),
  OR ($User.Id = &quot;005b0000000dun5AAA&quot;, CONTAINS ($User.LastName,&quot;License&quot;), CONTAINS ($User.FirstName,&quot;License&quot;) ),
 ISCHANGED( sfFma__Value__c ) 

)</errorConditionFormula>
        <errorMessage>License Management App user cannot update Feature Parameter Integers that are LMO to Subscriber.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_cannot_be_empty</fullName>
        <active>true</active>
        <errorConditionFormula>isBlank( sfFma__FullName__c )</errorConditionFormula>
        <errorDisplayField>sfFma__FullName__c</errorDisplayField>
        <errorMessage>Please enter a parameter Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__FullNameUpdatePrevention</fullName>
        <active>true</active>
        <description>Full Name can only be updated by the Feature Management App.</description>
        <errorConditionFormula>AND(ISCHANGED( sfFma__FullName__c ),
 $User.Id &lt;&gt;  CreatedById )</errorConditionFormula>
        <errorDisplayField>sfFma__FullName__c</errorDisplayField>
        <errorMessage>This value is set by the installed package and cannot be changed. Click undo or cancel to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__MetricValueUpdatePrevention</fullName>
        <active>true</active>
        <description>&quot;Subscriber To LMO&quot; Feature Parameter Values cannot be manually created or updated.</description>
        <errorConditionFormula>AND(AND( ISPICKVAL( sfFma__FeatureParameter__r.sfFma__DataFlowDirection__c , &quot;Subscriber To LMO&quot;) ,
 $User.Id &lt;&gt; sfFma__FeatureParameter__r.CreatedById ),
 ISCHANGED( sfFma__Value__c ) )</errorConditionFormula>
        <errorDisplayField>sfFma__Value__c</errorDisplayField>
        <errorMessage>Subscriber To LMO feature parameter values can only be created or updated by the Feature Management app. Click undo or cancel to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sfFma__XSS_Prevention_FullName</fullName>
        <active>true</active>
        <description>Prevent malicious code from being introduced into our text fields.</description>
        <errorConditionFormula>AND(NOT(REGEX(sfFma__FullName__c , &quot;\\w+__\\w+&quot;)),
NOT(ISBLANK( sfFma__FullName__c )))</errorConditionFormula>
        <errorDisplayField>sfFma__FullName__c</errorDisplayField>
        <errorMessage>Full Name must be in the format of &lt;namespace&gt;__&lt;developer name&gt;</errorMessage>
    </validationRules>
</CustomObject>